--- a/layouts/partial/head.html
+++ b/layouts/partial/head.html
@@ -1,2 +1,42 @@
-<h1><a href="{{.Home}}"><img src="themes/ask-asya/static/assets/main_leaf.jpg" alt="MongoDB Leaf"> {{.Author}}</a></h1>
-	<title>{{ .Title }}</title>
+<head>
+  <link href="http://gmpg.org/xfn/11" rel="profile">
+  <meta http-equiv="content-type" content="text/html; charset=utf-8">
+
+  <!-- Enable responsiveness on mobile devices-->
+  <meta name="viewport" content="width=device-width">
+
+  <title>
+    {{ if eq .URL "/" }}
+      {{ .Site.Params.Title }} &middot; {{ .Site.Params.Tagline }}
+    {{ else }}
+      {{ .Title }} &middot; {{ .Site.Params.Title }}
+    {{ end }}
+  </title>
+
+  <!-- CSS -->
+  <link rel="stylesheet" href="/css/poole.css">
+  <link rel="stylesheet" href="/css/syntax.css">
+  <link rel="stylesheet" href="/css/lanyon.css">
+  <!-- <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700|PT+Sans:400"> -->
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="{{ .Site.Params.Twitter }}" />
+  <meta name="twitter:title" content="{{ .Title }}" />
+  <meta name="twitter:description" content="{{ .Description }}" />
+  <meta name="twitter:image" content="{{ .Site.BaseURL }}{{ .Params.image }}" />
+
+  <!-- Icons -->
+  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/assets/main-leaf.jpg">
+  <link rel="shortcut icon" href="/assets/favicon.ico">
+
+  <!-- RSS -->
+  <link rel="alternate" type="application/rss+xml" title="RSS" href="/index.xml">
+
+  <!-- Other -->
+  <link rel="canonical" href="{{ .Permalink }}">
+  {{ if .Description }}
+  <meta name="description" value="{{ .Description }}">
+  {{ end }}
+</head>
