--- a/themes/ask-asya/layouts/partials/default_head.html
+++ b/themes/ask-asya/layouts/partials/default_head.html
@@ -12,10 +12,10 @@
     <div class="wrap">
       <div class="masthead">
         <div class="container">
-          <h3 class="masthead-title">
-            <a href="/" title="Home">{{ .Site.Params.Title }}</a>
+          <h1 class="masthead-title">
+            <a href="/" title="Home"> <img src=/assets/askLeafAsya.png height="128" width="415" alt={{ .Site.Params.Title }} ></a>
             <small>{{ .Site.Params.Tagline }}</small>
-          </h3>
+          </h1>
         </div>
       </div>
 
