--- a/themes/ask-asya/layouts/partials/sidebar.html
+++ b/themes/ask-asya/layouts/partials/sidebar.html
@@ -5,7 +5,8 @@
 <!-- Toggleable sidebar -->
 <div class="sidebar" id="sidebar">
   <div class="sidebar-item">
-    <p>A reserved <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.</p>
+    <p>{{ .Site.Params.Title }} &middot; {{ .Site.Params.Tagline }}</p>
+    <p>Based on <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.</p>
   </div>
 
   <nav class="sidebar-nav">
@@ -25,5 +26,9 @@
 
   <div class="sidebar-item">
     <p>&copy; {{ .Site.LastChange.Year }}. All rights reserved.</p>
+       <p>Contact: asya@mongodb.com, <a href="https://twitter.com/asya999">Twitter</a>,
+	  <a href="https://linkedin.com/in/asya999">LinkedIn</a>.
+	      <br>Powered by <a href="http://hugo.spf13.com">Hugo</a>. <a
+				href="/index.xml">RSS Feed</a>.</p>
   </div>
 </div>
