--- a/xlanyon.css
+++ b/xlanyon.css
@@ -51,6 +51,10 @@ h1, h2, h3, h4, h5, h6 {
   letter-spacing: -.025rem;
 }
 
+img {
+	max-width: 100%;
+}
+
 
 /*
  * Wrapper
@@ -103,8 +107,6 @@ h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
   margin-bottom: 0;
   color: #505050;
-  white-space: nowrap;
-  display: inline-block;
 }
 .masthead-title a {
   color: #505050;
@@ -115,17 +117,6 @@ h1, h2, h3, h4, h5, h6 {
   color: #c0c0c0;
   letter-spacing: 0;
 }
-
-@media (max-width: 48rem) {
-  .masthead-title {
-    text-align: center;
-    white-space: nowrap;
-  }
-  .masthead-title small {
-    display: none;
-  }
-}
-
 
 /*
  * Sidebar
