--- a/xpoole.css
+++ b/xpoole.css
@@ -49,12 +49,12 @@ body {
 
 html {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 14px;
+  font-size: 16px;
   line-height: 1.5;
 }
 @media (min-width: 38rem) {
   html {
-    font-size: 16px;
+    font-size: 20px;
   }
 }
 
@@ -85,7 +85,7 @@ h1, h2, h3, h4, h5, h6 {
   text-rendering: optimizeLegibility;
 }
 h1 {
-  font-size: 1.75rem;
+  font-size: 2rem;
 }
 h2 {
   margin-top: 1rem;
@@ -171,7 +171,7 @@ pre {
 }
 pre code {
   padding: 0;
-  font-size: 80%;
+  font-size: 100%;
   color: inherit;
   background-color: transparent;
 }
@@ -201,9 +201,9 @@ blockquote p:last-child {
 }
 
 img {
-  display: inline-block;
-  margin: 0 0 0rem;
-  border-radius: 0px;
+  display: block;
+  margin: 0 0 1rem;
+  border-radius: 5px;
 }
 
 /* Tables */
