--- a/layouts/partials/header.includes.html
+++ b/layouts/partials/header.includes.html
@@ -1,4 +1,6 @@
 
     <link href="/css/bootstrap.min.css" rel="stylesheet">
     <link href="/css/font-awesome.css" rel="stylesheet">
+    <link href="/css/variables.scss" rel="stylesheet">
+    <link href="/css/lavish-bootstrap.css" rel="stylesheet">
     <link href="/css/custom.css" rel="stylesheet">
