--- a/layouts/partials/menu.html
+++ b/layouts/partials/menu.html
@@ -1,12 +1,16 @@
     <div class="panel panel-default">
         <div class="panel-heading" style="padding: 2px 15px;">
-            <h4>Connect. Socialize.</h4>
+            <h4>Connect. Explore.</h4>
         </div>
         <div class="panel-body">
             <a href="https://github.com/asya999/" class="btn btn-success btn-xs"><i class="fa fa-github-square fa-2x"></i></a>
             <a href="https://www.twitter.com/asya999" class="btn btn-success btn-xs"><i class="fa fa-twitter-square fa-2x"></i></a>
             <a href="https://www.linkedin.com/asya999" class="btn btn-success btn-xs"><i class="fa fa-linkedin-square fa-2x"></i></a>
             <a href="https://www.facebook.com/mongodb" class="btn btn-success btn-xs"><i class="fa fa-facebook-square fa-2x"></i></a>
+            <br><br>
+            <a href="http://www.kamsky.org/stupid-tricks-with-mongodb" class="label label-default"><small>More ramblings about MongoDB</small></a>
+            <br>
+            <a href="http://stackoverflow.com/search?tab=votes&q=user%3a431012%20%5bmongodb%5d" class="label label-default"><small>My Answers on StackOverflow</small></a>
 
             <!-- <div class="alert alert-info alert-dismissable" style="margin-top:25px;margin-bottom:5px;">
                 <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
